--- a/styles.css
+++ b/styles.css
@@ -2,29 +2,29 @@ body{
     margin: 0;
 }
 .div-a{
-    background-color: #F4A460; 
+    background-color: #622e00; 
     width: 500px; 
     height: 500px;
 }
 .div-b{
-    background-color: #3CB371;
+    background-color: #000000;
     width: 250px; 
     height: 250px;
 }
 .div-b p{
-    color: #fff;
-    background-color: red; 
+    color: #13f1ee;
+    background-color: rgb(61, 65, 96); 
     font-size: 25px; 
-    font-family: monospace; 
+    font-family: Georgia, 'Times New Roman', Times, serif; 
     font-weight: bold;
 }
 .div-d{
-    width: 50vw; 
-    height: 50%; 
-    background-color: rgb(119, 184, 227);
+    width: 50%; 
+    height: 50vw; 
+    background-color: rgb(2, 14, 22);
 }
 .div-e{
-    height: 50vh;
-    width: 50%; 
-    background-color: rgb(176, 17, 17);
+    height: 50%;
+    width: 75vw; 
+    background-color: rgb(4, 44, 147);
 }
